unpackaged/main/default/objects/litify__lu_Product_Trigger_Object__c/litify__lu_Product_Trigger_Object__c.object-meta.xml
<CustomObject>
    <description>Junction object between Litify Products and Trigger Objects</description>
    <label>Product Trigger Object</label>
    <nameField>
        <label>Product Trigger Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Trigger Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>