unpackaged/main/default/objects/litify__lu_Product_Trigger_Object__c/fields/litify__lu_Override_Trigger_Handler__c.field-meta.xml
<CustomField>
    <fullName>litify__lu_Override_Trigger_Handler__c</fullName>
    <description>If this product/object combination needs a special trigger handler, specify the apex class here.</description>
    <label>Override Trigger Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>