unpackaged/main/default/objects/litify__lu_Product_Trigger_Object__c/fields/litify__lu_Trigger_Object__c.field-meta.xml
<CustomField>
    <fullName>litify__lu_Trigger_Object__c</fullName>
    <label>Trigger Object</label>
    <referenceTo>litify__lu_Trigger_Object__c</referenceTo>
    <relationshipLabel>Product Trigger Objects</relationshipLabel>
    <relationshipName>lu_Product_Trigger_Objects</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>